
name:                ieee18002012
version:             0.1.0.0
synopsis:            IEEE 1800-2012 SystemVerilog
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Anonymous Coward
maintainer:          foo@bar.bra
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:    
    Language.SystemVerilog.Parser 
    Language.SystemVerilog.Lexer 
    Language.SystemVerilog.Namespace 
    Language.SystemVerilog.Syntax 
    Language.SystemVerilog.Tokens 
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9, array, text, parsec
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
