
name:                ieee18002012
version:             0.1.0.1
synopsis:            IEEE 1800-2012 SystemVerilog
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Andreas Westerwick
maintainer:          westerwick@pconas.de
-- copyright:           
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:    
    Language.SystemVerilog.Parser 
    Language.SystemVerilog.Lexer 
    Language.SystemVerilog.Parser.Identity
    Language.SystemVerilog.Parser.Grammar
    Language.SystemVerilog.Parser.Writer
    Language.SystemVerilog.Syntax 
    Language.SystemVerilog.Tokens 
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9, array, text, parsec, transformers, containers
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
